--- a/UI/style.css
+++ b/UI/style.css
@@ -4,14 +4,30 @@
     top: 15px;
     left: 21.5em;
 }
+.textComment{
+    color: lavenderblush;
+    font-size: 20px;
+    font-weight: bolder;
+    margin: 10px;
+    float: left;
+
+}
+.like{
+    color: #e3bd8c;
+    font-size: 15px;
+    witdh: 30px;
+    height: 30px;
+    margin: 5px 5px 5px 0px;
+    float: left;
+}
 .thumb{
-    position:relative;
+    /*position:relative;*/
     top: 10px;
 
 }
 .LoadButton{
     position: fixed;
-    top: 2700px;
+    top: 5500px;
     left: 1100px;
     z-index: 2;
 }
@@ -64,8 +80,17 @@ p{
     width: 35%;
     position: absolute;
     top: 50px;
-    left:53em;
+    left:60em;
 }
+
+.post{
+    width: 500px;
+    height: 480px;
+    margin-left: 90%;
+    margin-bottom: 50px;
+    padding-top: 5px;
+}
+
 .search input {
     border: none;
 }
@@ -117,7 +142,7 @@ A:link {
     color: blue ;
 }
 A:visited {
-    color:gray;
+    color:darkred;
 }
 A:hover {
     color: darkblue ;
